# agentic-ai-quant-researcher

./: .gitignore  00_poc_04.ipynb  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
data/processed/: market_merged.parquet  signals.parquet
data/raw/: fundamentals_snapshot.parquet  ohlcv.parquet
notebooks/: 00_poc.ipynb  00_poc_01.ipynb  00_poc_02.ipynb  00_poc_03.ipynb  00_poc_04.ipynb  00_poc_localai.ipynb  01_universe_and_data.ipynb  02_feature_engineering.ipynb  03_signal_and_strategy_design.ipynb  04_backtesting_and_robustness.ipynb  05_agentic_evaluation_loop.ipynb
notebooks/data/: sample_prices.parquet
poc/: asyncpy.py  sample.txt  streamingllmoutput.py
reports/: agentic_research_memo.md  drawdowns.csv  equity_curves.csv  performance_metrics.csv
