[project]
name = "agentic-ai-quant-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "fastparquet>=2025.12.0",
    "gradio>=6.2.0",
    "matplotlib>=3.10.8",
    "openai>=2.14.0",
    "openai-agents>=0.6.4",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "yfinance>=1.0",
]
